# ContextLedger

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  install.sh  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  feedback.md
.github/workflows/: codeql.yml  lint.yml  tests.yml
.superpowers/sdd/: review-37bdace..e7641b0.diff  review-e7641b0..b99d27a.diff  task-1-brief.md  task-1-report.md  task-2-brief.md  task-2-report.md
docs/: api.md  architecture.md  build-demo.sh  demo-script.sh  demo.cast  demo.tape  quickstart.md  release-checklist-v0.1.md  roadmap.md
memory/: __init__.py  __main__.py  cli.py  config.py  crud.py  database.py  doctor.py  entity.py  graph.py  indexer.py  models.py  processor.py  search.py  semantic.py  vault.py
memory/api/: server.py
memory/mcp/: server.py
memory/providers/: __init__.py  base.py  file.py
specs/: 2026-07-09-v0.1-plan.md
tests/: test_api.py  test_cli.py  test_crud.py  test_doctor.py  test_graph.py  test_indexer.py  test_install.py  test_mcp.py  test_processor.py  test_providers.py  test_providers_file.py  test_search.py  test_semantic.py  test_smoke.py  test_vault.py
vault/: _index.md
