[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "contextledger"
version = "0.1.0"
description = "Local-first, human-editable memory infrastructure for AI agents"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.51.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
]
[project.optional-dependencies]
qdrant = ["qdrant-client>=1.9.0"]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[project.scripts]
memory = "memory.cli:main"

[tool.setuptools.packages.find]
include = ["memory*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
